--- a/kadai_010/templates/crud/product_list.html
+++ b/kadai_010/templates/crud/product_list.html
@@ -1,37 +1,30 @@
 {% extends "base.html" %}
-
 {% block title %}商品一覧{% endblock %}
 {% block content %}
     <h1>商品一覧</h1>
-    {#    <table border="1">#}
     <a href="{% url 'new' %}">新規作成</a>
     <table class="table table-striped table-hover table-bordered">
-        <thead>
-        <tr>
-            <th>商品名</th>
-            <th>価格</th>
-            <th>アクション</th>
-        </tr>
-        </thead>
+        <thread>
+            <tr>
+                <th>商品名</th>
+                <th>価格</th>
+                <th>アクション</th>
+            </tr>
+        </thread>
         {% for product in object_list %}
             <tr>
                 <td>{{ product.name }}</td>
-                <td>{{ product.price }}円</td>
+                <td>{{ product.price }}</td>
                 <td>
-                    <button class="btn btn-success" onclick="location.href='{% url 'detail' pk=product.pk %}'">詳細
-                    </button>
-                    <button class="btn btn-primary" onclick="location.href='{% url 'edit' pk=product.pk %}'">編集
-                    </button>
-                    <button class="btn btn-danger" onclick="location.href='{% url 'delete' pk=product.pk %}'">削除
-                    </button>
-
+                    <button class="btn btn-success" onclick="location.href='{% url 'detail' pk=product.pk %}'">詳細</button>
+                    <button class="btn btn-primary" onclick="location.href='{% url 'edit' pk=product.pk %}'">編集</button>
+                    <button class="btn btn-danger" onclick="location.href='{% url 'delete' pk=product.pk %}'">削除</button>
                 </td>
             </tr>
         {% endfor %}
     </table>
-
     {# ページの表示 #}
-    {{ page_obj.number }} / {{ page_obj.paginator.num_pages }} ページ<br>
+    {{ page_obj.number }}/{{ page_obj.paginator.num_pages }} ページ <br>
 
     {# 前へ #}
     {% if page_obj.has_previous %}
